<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.baskoti.LoginActivity"
    android:background="#ffffff">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />


    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#03A9F4"
                android:baselineAligned="false">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#ffffff"
                    android:textColor="#03A9F4"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:imeActionId="@+id/login"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#03A9F4"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#ffffff"
                    android:textColor="#03A9F4"
                    android:backgroundTint="@color/colorPrimaryDark"
                    />



                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="#03A9F4"
                    android:singleLine="true"
                    android:background="#FFEB3B" />



                <Button
                    style="?android:textAppearanceSmall"
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:singleLine="true"
                    android:background="#03A9F4"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickRegister"
                    android:imeActionId="@+id/login"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Forget Password?"
                    android:id="@+id/textView"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickForgetPassword"
                    android:imeActionId="@+id/login"
                    />

                <Button
                    style="?android:textAppearanceSmall"
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Organization?"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:singleLine="true"
                    android:background="#03A9F4"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onClickRegister"
                    android:imeActionId="@+id/login"
                    />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
